--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   tabbed_view: ^1.16.0+1
   font_awesome_flutter: ^10.4.0
+  blur: ^3.1.0
 
 dev_dependencies:
   flutter_test:
