--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "cmake.sourceDirectory": "${workspaceFolder}/c_sharp_interface"
+    "cmake.sourceDirectory": "${workspaceFolder}/c_sharp_interface",
+    "files.associations": {
+        "iostream": "cpp"
+    }
 }
