updating to add key events

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,6 +76,9 @@
         "unordered_set": "cpp",
         "variant": "cpp",
         "vector": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "codecvt": "cpp",
+        "condition_variable": "cpp",
+        "future": "cpp"
     }
 }
