adding json library

--- a/c_sharp_interface/CMakeLists.txt
+++ b/c_sharp_interface/CMakeLists.txt
@@ -110,10 +110,20 @@ project(project_typhon)
     
     list(APPEND typhon_INCLUDES ${PROJECT_SOURCE_DIR}/vendor/crunch/crunch/)
     list(APPEND typhon_LIBRARIES libcrunch)
+    
+    
+    FetchContent_Declare(JSON
+    GIT_REPOSITORY https://github.com/nlohmann/json
+    GIT_TAG v3.11.2
+    SOURCE_DIR ${PROJECT_SOURCE_DIR}/vendor/json
+    ) 
+    
+    FetchContent_MakeAvailable(JSON)
 
-
-
-# --------------------- Targets ------------------------
+    list(APPEND typhon_INCLUDES ${PROJECT_SOURCE_DIR}/vendor/json/single_include)
+    
+    
+    # --------------------- Targets ------------------------
 
   # settings for target typhon...
 
