--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
   flame: ^1.6.0
-
+  window_size:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding
+      path: plugins/window_size
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
