--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   native_context_menu:
   material_design_icons_flutter:
   file_picker:
+  url_launcher:
   
 dev_dependencies:
   flutter_test:
