adding file watching and improving build times

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   material_design_icons_flutter:
   file_picker:
   url_launcher:
-  focus_detector:
+  watcher:
   
 dev_dependencies:
   flutter_test:
