--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -361,8 +361,117 @@ flutter:
     - assets/lib/src/vendor/shaderc/kokoro/windows/
     - assets/lib/src/vendor/shaderc/kokoro/ndk-build/
     - assets/lib/src/vendor/shaderc/kokoro/android-release/
+    - assets/lib/src/vendor/entt/
+    - assets/lib/src/vendor/entt/test/
+    - assets/lib/src/vendor/entt/test/benchmark/
+    - assets/lib/src/vendor/entt/test/snapshot/
+    - assets/lib/src/vendor/entt/test/entt/locator/
+    - assets/lib/src/vendor/entt/test/entt/core/
+    - assets/lib/src/vendor/entt/test/entt/config/
+    - assets/lib/src/vendor/entt/test/entt/entity/
+    - assets/lib/src/vendor/entt/test/entt/graph/
+    - assets/lib/src/vendor/entt/test/entt/meta/
+    - assets/lib/src/vendor/entt/test/entt/container/
+    - assets/lib/src/vendor/entt/test/entt/common/
+    - assets/lib/src/vendor/entt/test/entt/resource/
+    - assets/lib/src/vendor/entt/test/entt/signal/
+    - assets/lib/src/vendor/entt/test/entt/process/
+    - assets/lib/src/vendor/entt/test/entt/poly/
+    - assets/lib/src/vendor/entt/test/example/
+    - assets/lib/src/vendor/entt/test/lib/locator/plugin/
+    - assets/lib/src/vendor/entt/test/lib/locator/shared/
+    - assets/lib/src/vendor/entt/test/lib/locator/common/
+    - assets/lib/src/vendor/entt/test/lib/emitter/plugin/
+    - assets/lib/src/vendor/entt/test/lib/emitter/shared/
+    - assets/lib/src/vendor/entt/test/lib/emitter/common/
+    - assets/lib/src/vendor/entt/test/lib/dispatcher/plugin/
+    - assets/lib/src/vendor/entt/test/lib/dispatcher/shared/
+    - assets/lib/src/vendor/entt/test/lib/dispatcher/common/
+    - assets/lib/src/vendor/entt/test/lib/meta/plugin/
+    - assets/lib/src/vendor/entt/test/lib/meta/shared/
+    - assets/lib/src/vendor/entt/test/lib/meta/common/
+    - assets/lib/src/vendor/entt/test/lib/meta/plugin_std/
+    - assets/lib/src/vendor/entt/test/lib/registry/plugin/
+    - assets/lib/src/vendor/entt/test/lib/registry/shared/
+    - assets/lib/src/vendor/entt/test/lib/registry/common/
+    - assets/lib/src/vendor/entt/cmake/in/
+    - assets/lib/src/vendor/entt/cmake/modules/
+    - assets/lib/src/vendor/entt/docs/
+    - assets/lib/src/vendor/entt/docs/md/
+    - assets/lib/src/vendor/entt/docs/dox/
+    - assets/lib/src/vendor/entt/natvis/entt/
+    - assets/lib/src/vendor/entt/scripts/
+    - assets/lib/src/vendor/entt/conan/
+    - assets/lib/src/vendor/entt/conan/ci/
+    - assets/lib/src/vendor/entt/conan/test_package/
+    - assets/lib/src/vendor/entt/.github/workflows/
+    - assets/lib/src/vendor/entt/build/
+    - assets/lib/src/vendor/entt/.git/objects/pack/
+    - assets/lib/src/vendor/entt/.git/info/
+    - assets/lib/src/vendor/entt/.git/logs/
+    - assets/lib/src/vendor/entt/.git/logs/refs/heads/
+    - assets/lib/src/vendor/entt/.git/logs/refs/remotes/origin/
+    - assets/lib/src/vendor/entt/.git/hooks/
+    - assets/lib/src/vendor/entt/.git/refs/heads/
+    - assets/lib/src/vendor/entt/.git/refs/remotes/origin/
+    - assets/lib/src/vendor/entt/single_include/entt/
+    - assets/lib/src/vendor/entt/src/entt/
+    - assets/lib/src/vendor/entt/src/entt/locator/
+    - assets/lib/src/vendor/entt/src/entt/core/
+    - assets/lib/src/vendor/entt/src/entt/config/
+    - assets/lib/src/vendor/entt/src/entt/entity/
+    - assets/lib/src/vendor/entt/src/entt/platform/
+    - assets/lib/src/vendor/entt/src/entt/graph/
+    - assets/lib/src/vendor/entt/src/entt/meta/
+    - assets/lib/src/vendor/entt/src/entt/container/
+    - assets/lib/src/vendor/entt/src/entt/resource/
+    - assets/lib/src/vendor/entt/src/entt/signal/
+    - assets/lib/src/vendor/entt/src/entt/process/
+    - assets/lib/src/vendor/entt/src/entt/poly/
     - assets/lib/src/vendor/ecspp/
     - assets/lib/src/vendor/ecspp/test/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/tools/misc/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/tools/scripts/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/fuzzing/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/CMake/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/tests/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/tests/TestScripts/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/tests/SelfTest/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/tests/SelfTest/Misc/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/tests/SelfTest/IntrospectiveTests/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/tests/SelfTest/TimingTests/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/tests/SelfTest/UsageTests/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/tests/SelfTest/Baselines/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/tests/ExtraTests/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/.conan/test_package/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/docs/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/third_party/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/examples/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/.github/workflows/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/.github/ISSUE_TEMPLATE/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/.git/objects/pack/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/.git/info/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/.git/logs/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/.git/logs/refs/heads/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/.git/logs/refs/remotes/origin/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/.git/hooks/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/.git/refs/heads/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/.git/refs/remotes/origin/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/data/artwork/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/src/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/src/catch2/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/src/catch2/benchmark/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/src/catch2/benchmark/internal/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/src/catch2/benchmark/detail/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/src/catch2/internal/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/src/catch2/generators/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/src/catch2/generators/internal/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/src/catch2/matchers/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/src/catch2/matchers/internal/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/src/catch2/reporters/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/src/catch2/interfaces/
+    - assets/lib/src/vendor/ecspp/test/vendor/catch2/extras/
     - assets/lib/src/vendor/ecspp/include/
     - assets/lib/src/vendor/ecspp/include/components/
     - assets/lib/src/vendor/ecspp/include/object/
